objects/Shipment__c/Shipment__c.object-meta.xml
<CustomObject>
    <description>This is shipment object used for production estimate process</description>
    <label>Shipment</label>
    <nameField>
        <displayFormat>Ship-{000000}</displayFormat>
        <label>Shipment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>