objects/Shipment__c/fields/Shipment_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Address_2__c</fullName>
    <label>Shipment Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>