objects/Shipment__c/fields/Shipment_City__c.field-meta.xml
<CustomField>
    <fullName>Shipment_City__c</fullName>
    <label>Shipment City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>