objects/Shipment__c/fields/Shipment_Email__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Email__c</fullName>
    <label>Shipment Email</label>
    <type>Email</type>
</CustomField>