objects/Shipment__c/fields/Shipment_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Name__c</fullName>
    <label>Shipment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>