objects/Shipment__c/fields/Shipment_Phone__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Phone__c</fullName>
    <label>Shipment Phone</label>
    <type>Phone</type>
</CustomField>