objects/Shipment__c/fields/Shipment_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Street_Address__c</fullName>
    <label>Shipment Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>