objects/Shipment__c/fields/Shipment_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Zip__c</fullName>
    <label>Shipment Zip</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>