objects/Shipment__c/fields/Shipment_Zip_code__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Zip_code__c</fullName>
    <label>Shipment Zip Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>