objects/Shipment__c/fields/Shipping_Note__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Note__c</fullName>
    <label>Shipping Note</label>
    <type>TextArea</type>
</CustomField>