objects/Shipment__c/fields/TO_ATTN__c.field-meta.xml
<CustomField>
    <fullName>TO_ATTN__c</fullName>
    <label>TO:/ATTN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>