objects/Shipment__c/fields/UPS_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>UPS_Tracking_Number__c</fullName>
    <description>Text field manually entered, but in the near future it  will integrate with the UPS shipping app</description>
    <label>UPS Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>